# Neutron-stars-final-2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Doxyfile  LICENSE  README.md  __init__.py  constants.py  environment.yml  eos.py  main. 2009.py  main.py  plotting.py  pyproject.toml  requirements.txt  solver.py  tov.py  units.py  utils.py  validation.py
html/: _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  classes.html  classmain_1_1_r_l_o_f_polytrope-members.html  classmain_1_1_r_l_o_f_polytrope.html  classmain_1_1_r_l_o_f_polytrope.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  index.js  main_8py.html  main_8py.js  md__c_h_a_n_g_e_l_o_g.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  pages_5.js  (+6 more)
latex/: annotated.tex  classmain_1_1_r_l_o_f_polytrope.tex  files.tex  index.tex  main_8py.tex  md__c_h_a_n_g_e_l_o_g.tex  md__r_e_a_d_m_e.tex  refman.tex
